[gd_scene load_steps=8 format=3 uid="uid://bmxkc673gdxpm"]

[ext_resource type="Script" path="res://scripts/cop.gd" id="1_f0pa1"]
[ext_resource type="Texture2D" uid="uid://cajyyhyibvcp" path="res://assets/5-коп.png" id="2_d736i"]
[ext_resource type="AudioStream" uid="uid://dyxurkecrawnd" path="res://assets/423196__bepis_fast_step.wav" id="3_rm1rh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t1r1a"]
radius = 7.0
height = 24.0

[sub_resource type="Animation" id="Animation_37aod"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_j5sfk"]
resource_name = "walk"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-0.0349066, 0.0349066]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c3v5k"]
_data = {
"RESET": SubResource("Animation_37aod"),
"walk": SubResource("Animation_j5sfk")
}

[node name="cop" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 48
collision_mask = 65
motion_mode = 1
script = ExtResource("1_f0pa1")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_d736i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(7, 14)
shape = SubResource("CapsuleShape2D_t1r1a")

[node name="agent" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
target_desired_distance = 4.0

[node name="ladder_reset" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="sight" type="RayCast2D" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(-1.5, 2.38419e-06)
scale = Vector2(2.55, 3.2)

[node name="point_select" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c3v5k")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_rm1rh")
max_distance = 320.0
attenuation = 0.129408

[connection signal="navigation_finished" from="agent" to="." method="_on_agent_navigation_finished"]
[connection signal="timeout" from="ladder_reset" to="." method="_on_ladder_reset"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
[connection signal="timeout" from="point_select" to="." method="_on_point_select_timeout"]
